# Tally-Automation

./: .env.example  .gitignore  README.md  claude_desktop_config.example.json  pyproject.toml
.github/workflows/: tests.yml
docs/: SETUP.md  TEST_PLAN.md  TOOLS.md  VERIFYING_WRITES.md
scripts/: e2e_test.py  smoke_test.py
src/tally_mcp/: __init__.py  client.py  config.py  drafts.py  reports.py  server.py  writes.py  xml_builder.py  xml_parser.py
tests/: conftest.py  mock_tally.py  test_client.py  test_config.py  test_coverage_edges.py  test_drafts.py  test_integration_reports.py  test_reports.py  test_reports_parsing.py  test_server_elicitation.py  test_server_tools.py  test_smoke_script.py  test_write_guard.py  test_writes.py  test_xml_builder.py  test_xml_parser.py
tests/fixtures/: balance_sheet.xml  bills.xml  companies.xml  error_lineerror.xml  groups.xml  import_error.xml  import_success.xml  ledgers.xml  pnl.xml  stockitems.xml  vouchers.xml
